| Bug #42422 | Incorrect handling of node-failure before all nodes connected | ||
|---|---|---|---|
| Submitted: | 28 Jan 15:15 | Modified: | 1 Feb 0:54 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | * | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[28 Jan 15:15]
Jonas Oreland
[29 Jan 11:57]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64435 2802 Jonas Oreland 2009-01-29 ndb - bug#42422 - fix in node-failure during sp1
[29 Jan 14:58]
Bugs System
Pushed into 5.1.31-ndb-6.2.17 (revid:jonas@mysql.com-20090129105652-glpkicqsbicf01fs) (version source revid:jonas@mysql.com-20090129105652-glpkicqsbicf01fs) (merge vers: 5.1.31-ndb-6.2.17) (pib:6)
[29 Jan 14:59]
Bugs System
Pushed into 5.1.31-ndb-6.3.22 (revid:jonas@mysql.com-20090129135456-6t2h99j4dndcmg6c) (version source revid:jonas@mysql.com-20090129105951-1n3y19smlrszoek3) (merge vers: 5.1.31-ndb-6.3.22) (pib:6)
[29 Jan 15:01]
Bugs System
Pushed into 5.1.31-ndb-6.4.3 (revid:jonas@mysql.com-20090129135746-ujd9ff95oo4c7pht) (version source revid:jonas@mysql.com-20090129110747-w4433lxcz8x53i9g) (merge vers: 5.1.31-ndb-6.4.2) (pib:6)
[1 Feb 0:54]
Jon Stephens
Documented bugfix in the NDB-6.2.17, 6.3.22, and 6.4.3 changelogs as follows:
Data node failures that occurred before all data nodes had
connected to the cluster were not handled correctly, leading to
additional data node failures.
[10 Feb 21:13]
Bugs System
Pushed into 6.0.10-alpha (revid:alik@sun.com-20090210194937-s7xshv5l3m1v7wi9) (version source revid:tomas.ulin@sun.com-20090129163531-z8ao7stcp6cjlxz4) (merge vers: 6.0.10-alpha) (pib:6)
