ndb - bug#42422 - fix in node-failure during sp1